--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
 </head>
 <body>
+  <div class="menu__wrp">
+    <div class="menu__line"></div>
+    <div class="menu__line"></div>
+  </div>
+
   <div class="slider__indicator__wrp">
     <div class="slider__indicator" id="js-slide-indicator-1">
       <div class="fill"></div>
@@ -22,7 +27,9 @@
   </div>
 
   <div class="slider__wrp">
-    <div class="slider active">
+
+    <!--slide 1-->
+    <div class="slider active" id="js-slide-1">
       <div class="slider__content__wrp">
         <div class="slider__content">
           <img class="slider__img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNk+P+/HgAFhAJ/wlseKgAAAABJRU5ErkJggg==">
@@ -35,9 +42,59 @@
         </div>
       </div>
     </div>
-    <div class="slider">slide 2</div>
-    <div class="slider">slide 3</div>
-    <div class="slider">slide 4</div>
+
+    <!--slide 1-->
+    <div class="slider active" id="js-slide-1">
+      <div class="slider__content__wrp">
+        <div class="slider__content">
+          <img class="slider__img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNk+P+/HgAFhAJ/wlseKgAAAABJRU5ErkJggg==">
+          <div class="slider__data">
+            Hi! My&nbsp;name <br>
+            is&nbsp;Dima Zyuzin. <br>
+            I&rsquo;m a&nbsp;designer <br>
+            at&nbsp;Paxful.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--slide 2-->
+    <div class="slider active" id="js-slide-2">
+      <div class="slider__content__wrp">
+        <div class="slider__content">
+          <img class="slider__img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNk+P+/HgAFhAJ/wlseKgAAAABJRU5ErkJggg==">
+          <div class="slider__data">
+            I&rsquo;m 8&nbsp;year <br>
+            experienced <br>
+            digital product <br>
+            designer
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--slide 3-->
+    <div class="slider active" id="js-slide-3">
+      <div class="slider__content__wrp">
+        image bg
+      </div>
+    </div>
+
+    <!--slide 4-->
+    <div class="slider active" id="js-slide-4">
+      <div class="slider__content__wrp">
+        <div class="slider__content">
+          <img class="slider__img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNk+P+/HgAFhAJ/wlseKgAAAABJRU5ErkJggg==">
+          <div class="slider__data">
+            Telegram <br>
+            Facebook <br>
+            Instagram <br>
+            Dribbble <br>
+            Linked In
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
