--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,8 @@
           <img class="slider__img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNk+P+/HgAFhAJ/wlseKgAAAABJRU5ErkJggg==">
           <div class="slider__data">
             Hey! My&nbsp;name <br>
-            is&nbsp;Dmitrii Ziuzin <br>
-            I&rsquo;m a&nbsp;designer
+            is&nbsp;Dmitrii Ziuzin. <br>
+            I&rsquo;m a&nbsp;designer.
           </div>
         </div>
       </div>
