--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
     <div class="slider__content">
       <div class="slider__data">
         <div class="links__wrp" style="text-align: center">
-          <a href="#" class="link menu__link" onclick="changeSlideClicked(0)">Who</a>
-          <a href="#" class="link menu__link" onclick="changeSlideClicked(1)">Experience</a>
-          <a href="#" class="link menu__link" onclick="changeSlideClicked(3)">Contacts</a>
+          <a href="#" class="link menu__link" onclick="changeSlideClicked(event,0)">Who</a>
+          <a href="#" class="link menu__link" onclick="changeSlideClicked(event,1)">Experience</a>
+          <a href="#" class="link menu__link" onclick="changeSlideClicked(event,3)">Contacts</a>
         </div>
       </div>
     </div>
